# cursor-agent

./: .env.example  .flake8  .gitignore  .mypy.ini  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  constraints.md  debug_ollama.py  dev_install.sh  divide_function.py  factorial.py  fix_whitespace_errors.py  install_test_package.sh  main.py  pyproject.toml  pytest.ini  reinstall.sh  requirements.txt  run_ci_checks.sh  run_tests.py  setup copy.py  setup.cfg  setup.py  test.py  test_anthropic.py  test_backward_compatibility.py  test_chat_feature.py  test_import.py  test_imports.py  test_imports_only.py  test_line_edit.py  test_link_replacement.py  test_module_structure.py  test_structure.py
.github/: FUNDING.yml
agent/: __init__.py  base.py  claude_agent.py  factory.py  interact.py  ollama_agent.py  openai_agent.py  permissions.py
cursor_agent/: METADATA  __init__.py
cursor_agent_tools/: METADATA  __init__.py  claude_agent.py  factory.py  logger.py  ollama_agent.py
docs/: ollama_integration.md  open_source_models.md  permissions_guide.md  trend_search.md  web_search.md
examples/: DEMO_README.md  README.md  basic_usage.py  chat_conversation_example.py  chat_demo.py  code_search_example.py  file_manipulation_example.py  file_tools_demo.py  interactive_demo.py  interactive_mode_example.py  line_based_edit_example.py  main.py  main_demo.py  ollama_chat_example.py  ollama_image_query_example.py  ollama_tool_calling_example.py  permission_example.py  search_demo.py  simple_task_example.py  trend_search_example.py  utils.py  (+1 more)
(+75 files in other folders)
