[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[tool.bumpversion.file.setup_py]
search = 'version="{current_version}"'
replace = 'version="{new_version}"'

dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.6.1",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    "httpx>=0.25.0",
] 